New-Upload-1755854042013/objects/Permission_Set_XML__c.object
<CustomObject>
    <fields>
        <fullName>Has_Activation_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Activation Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_Set_Name__c</fullName>
        <label>Permission Set Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XML_Data__c</fullName>
        <label>XML Data</label>
        <type>TextArea</type>
    </fields>
    <label>Permission Set XML</label>
    <nameField>
        <displayFormat>PSXML-{0000}</displayFormat>
        <label>Permission Set XML Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Permission Set XMLs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>